Update index.html guest to away

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="top">
                 <span class="home_team teams">Home</span>
                 <span class="timer border">00:00</span>
-                <span class="guest_team teams">Guest</span>
+                <span class="guest_team teams">Away</span>
             </div>
 
             <h3 class="stat_label">PERIOD</h3>
